--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -34,14 +34,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:src="@{item.urlToImage}"
-                    android:alpha="1.0"
+                    android:alpha=".75"
                     android:scaleType="fitXY"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
                 <View
                     android:layout_width="match_parent"
-                    android:background="#BF000000"
+                    android:background="@android:color/black"
+                    android:alpha="0.65"
                     app:layout_constraintTop_toTopOf="@+id/tvTitle"
                     app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                     android:layout_height="0dp"/>
@@ -54,6 +55,7 @@
                     android:paddingStart="12dp"
                     android:textColor="#f2f2f2"
                     android:paddingEnd="12dp"
+                    tools:text="Boeing will pay 100$ to .."
                     android:layout_marginBottom="24dp"
                     app:layout_constraintBottom_toTopOf="@+id/tvSource"
                     app:layout_constraintStart_toStartOf="parent"
